--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -20,6 +20,7 @@
     
     <!-- Application Styles -->
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/css/matcha-dashboard.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/css/sidebar.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/css/ui-libraries.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/css/empty-states.css" asp-append-version="true" />
